--- a/eslint.yaml
+++ b/eslint.yaml
@@ -65,4 +65,6 @@ rules:
     object-property-newline:             off
     curly:                               off
     space-in-parens:                     off
+    quote-props:                         off
+    array-bracket-spacing:               off
 
